<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--avt-->
            <ImageView
                android:layout_marginTop="30dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:src="@drawable/avt" />
            <!--fill information-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">
                <!--name -->
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:autofillHints="no"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:textColor="@color/gray"
                    android:textSize="30sp" />
                <!--gender-->
                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!--header + radio -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!--header - gender -->
                        <EditText
                            android:id="@+id/gender"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:hint="@string/gender"
                            android:textColor="@color/gray"
                            android:textSize="30sp"
                            android:inputType="text"/>
                        <!--radio group-->
                        <RadioGroup
                            android:id="@+id/gender_choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp">
                            <!--radio male-->
                            <RadioButton
                                android:id="@+id/gender_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/male"
                                android:textSize="30sp">
                            </RadioButton>
                            <!--radio female-->
                            <RadioButton
                                android:id="@+id/gender_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/female"
                                android:textSize="30sp">
                            </RadioButton>
                        </RadioGroup>
                    </LinearLayout>
                    <!--line-->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray">
                    </View>
                </LinearLayout>
                <!--favourite-->
                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!--header favourite-->
                        <EditText
                            android:id="@+id/favourite"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:hint="@string/favourite"
                            android:inputType="text"
                            android:textColor="@color/gray"
                            android:textSize="30sp">
                        </EditText>
                        <!--radio group-->
                        <RadioGroup
                            android:id="@+id/favourite_choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginStart="15dp">
                            <!--radio male-->
                            <RadioButton
                                android:id="@+id/favourite_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/male"
                                android:textSize="20sp">
                            </RadioButton>
                            <!--radio female-->
                            <RadioButton
                                android:id="@+id/favourite_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female"
                                android:textSize="20sp">
                            </RadioButton>
                            <!--radio both-->
                            <RadioButton
                                android:id="@+id/favourite_both"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/both"
                                android:textSize="20sp">
                            </RadioButton>
                        </RadioGroup>
                    </LinearLayout>
                    <!--line-->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray">
                    </View>
                </LinearLayout>
            <!--email-->
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:importantForAutofill="no"
                    android:minHeight="48dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/gray"
                    android:textSize="30sp"/>
                <!--address-->
                <EditText
                    android:layout_marginBottom="20dp"
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:textColor="@color/gray"
                    android:textSize="30sp"/>
                <!--love checkbox-->
                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!--header - checkbox-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!--header-->
                        <EditText
                            android:id="@+id/love"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:inputType="text"
                            android:hint="@string/love"
                            android:textSize="20sp"
                            android:textColor="@color/gray">
                        </EditText>
                        <!--checkbox football-->
                        <CheckBox
                            android:id="@+id/football"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/football"
                            android:textSize="20sp">
                        </CheckBox>
                        <!--checkbox swimming-->
                        <CheckBox
                            android:id="@+id/swimming"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/swimming"
                            android:textSize="20sp">
                        </CheckBox>
                        <!--checkbox jogging-->
                        <CheckBox
                            android:id="@+id/jogging"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jogging"
                            android:textSize="20sp">
                        </CheckBox>
                    </LinearLayout>
                    <!--line-->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray">
                    </View>
                </LinearLayout>
                <!--rating-->
                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!--header - checkbox-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!--header-->
                        <EditText
                            android:id="@+id/rating_text"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:hint="@string/rating"
                            android:inputType="text"
                            android:textColor="@color/gray"
                            android:textSize="20sp">
                        </EditText>
                        <!--checkbox football-->
                        <RatingBar
                            android:id="@+id/rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="5"
                            android:stepSize="1.0"
                            android:rating="0"
                            android:layout_marginStart="10dp">
                        </RatingBar>
                    </LinearLayout>
                    <!--line-->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray">
                    </View>
                </LinearLayout>
                <!--diem toeic-->
                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!--header + switch-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!--header-->
                        <EditText
                            android:id="@+id/toeic_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/toeic"
                            android:inputType="number"
                            android:textColor="@color/gray"
                            android:textSize="20sp"
                            tools:ignore="TouchTargetSizeCheck" />
                        <SeekBar
                            android:id="@+id/toeic"
                            android:max="197"
                            android:progress="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center" />
                    </LinearLayout>
                    <!--line-->
                    <View
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray">
                    </View>
                </LinearLayout>
                <!--notification-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!--header-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!--header-->
                        <EditText
                            android:id="@+id/noti_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/noti"
                            android:inputType="text"
                            android:textColor="@color/gray"
                            android:textSize="20sp"
                            tools:ignore="TouchTargetSizeCheck" />

                        <Switch
                            android:id="@+id/notification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />
                    </LinearLayout>
                    <!--line-->
                    <View
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray">
                    </View>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
        <!--button-->
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>
